...
                android:focusable="false"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/et_search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    app:commitIcon="@drawable/ic_search"
                    app:iconifiedByDefault="false"
                    app:queryHint="@string/search_query" />
...
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_bar">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_search_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="4dp"
                    tools:listitem="@layout/row_images_list" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

...
